...
                                <rect key="frame" x="20" y="185" width="374" height="312"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9CH-J0-ewh">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        </connections>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S6d-Go-dJz">
                                        <rect key="frame" x="0.0" y="141" width="374" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        </connections>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirm Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uaS-X9-34W">
                                        <rect key="frame" x="0.0" y="211.5" width="374" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="321" y="517" width="73" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Register"/>
                                <connections>
                                    <action selector="registerAction:" destination="x2k-zx-Tom" eventType="touchUpInside" id="NEi-4W-bVG"/>
...
                                <rect key="frame" x="163" y="326" width="88" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Add memory"/>
                            </button>
                        </subviews>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tls-8c-mqp">
                                        <rect key="frame" x="0.0" y="141" width="374" height="30"/>
                                        <state key="normal" title="Don't have an account yet? Register here"/>
                                        <connections>
                                            <segue destination="x2k-zx-Tom" kind="show" id="8iz-4S-CeL"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aew-Ph-ECV" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Journey" image="globe" catalog="system" id="UbM-AV-tDx"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JoF-fI-XeG">
...
