...
                                        </connections>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0tk-0f-4Zv">
                                        <rect key="frame" x="0.0" y="70.5" width="374" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e76-Y5-YQK">
                                        <rect key="frame" x="0.0" y="141" width="374" height="30"/>
                                        <state key="normal" title="Don't have an account yet? Register here"/>
                                        <connections>
                                            <segue destination="bpx-gs-aDk" kind="show" id="j5c-5i-bwd"/>
...
                                <rect key="frame" x="345" y="376" width="49" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Login"/>
                            </button>
                        </subviews>
...
                                <rect key="frame" x="20" y="141" width="374" height="312"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S4o-Px-esF">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                        </connections>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirm Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cCL-So-ff5">
                                        <rect key="frame" x="0.0" y="211.5" width="374" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <rect key="frame" x="321" y="473" width="73" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Register"/>
                                <connections>
                                    <action selector="registerAction:" destination="bpx-gs-aDk" eventType="touchUpInside" id="BUa-Um-DNW"/>
...
