...
    @IBOutlet weak var changeScreenBtn: UIButton!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        // sets color to specific word in button text
        let mainString = "Already have an account? Register here"
        let stringToColor = "Register here"
        let range = (mainString as NSString).range(of: stringToColor)
        
        let mutableAttributedString = NSMutableAttributedString.init(string: mainString)
        mutableAttributedString.addAttribute(NSAttributedString.Key.foregroundColor, value: UIColor.link, range: range)
        changeScreenBtn.setAttributedTitle(mutableAttributedString, for: [])
...
